--- a/addons/account/i18n/es.po
+++ b/addons/account/i18n/es.po
@@ -35,7 +35,6 @@
 # Denis Ledoux <dle@odoo.com>, 2016
 # Roberto Lizana <robertolizana@trey.es>, 2016
 # Nhomar Hernández [Vauxoo] <nhomar@vauxoo.com>, 2016
-# Dario Bermudez <DBsublimaciones@gmail.com>, 2016
 # Manuel Gómez <nuelgoz@gmail.com>, 2016
 # Miguel Mendez <migmen@virtuellhandel.no>, 2016
 # RGB Consulting <odoo@rgbconsulting.com>, 2016
@@ -182,14 +181,12 @@ msgstr "# de transacción"
 #. module: account
 #: model:mail.template,subject:account.email_template_edi_invoice
 msgid "${object.company_id.name} Invoice (Ref ${object.number or 'n/a'})"
-msgstr ""
-"${Asunto.compañía _N° de Identificación. Nombre} Factura (Ref "
-"${asunto.number or 'n/a'})"
+msgstr "${object.company_id.name} Factura (Ref ${object.number or 'n/a'})"
 
 #. module: account
 #: model:mail.template,subject:account.mail_template_data_notification_email_account_invoice
 msgid "${object.subject}"
-msgstr "${objetivo.Asunto}"
+msgstr "${object.subject}"
 
 #. module: account
 #: code:addons/account/models/account_bank_statement.py:466
@@ -7716,7 +7713,7 @@ msgstr "Motivo"
 #. module: account
 #: model:ir.ui.view,arch_db:account.tax_adjustments_wizard
 msgid "Reason..."
-msgstr ""
+msgstr "Motivo..."
 
 #. module: account
 #: model:account.account.type,name:account.data_account_type_receivable
@@ -7804,7 +7801,7 @@ msgstr "Conciliado"
 #. module: account
 #: model:ir.model.fields,field_description:account.field_account_report_partner_ledger_reconciled
 msgid "Reconciled Entries"
-msgstr ""
+msgstr "Asientos conciliados"
 
 #. module: account
 #: model:ir.ui.view,arch_db:account.view_move_form
@@ -10854,7 +10851,7 @@ msgstr "account.config.settings"
 #. module: account
 #: model:ir.model,name:account.model_account_reconcile_model_template
 msgid "account.reconcile.model.template"
-msgstr ""
+msgstr "account.reconcile.model.template"
 
 #. module: account
 #: model:ir.model,name:account.model_account_tax_group
@@ -11000,7 +10997,7 @@ msgstr "report.account.report_generalledger"
 #. module: account
 #: model:ir.model,name:account.model_report_account_report_journal
 msgid "report.account.report_journal"
-msgstr ""
+msgstr "report.account.report_journal"
 
 #. module: account
 #: model:ir.model,name:account.model_report_account_report_overdue
@@ -11010,7 +11007,7 @@ msgstr "report.account.report_overdue"
 #. module: account
 #: model:ir.model,name:account.model_report_account_report_partnerledger
 msgid "report.account.report_partnerledger"
-msgstr ""
+msgstr "report.account.report_partnerledger"
 
 #. module: account
 #: model:ir.model,name:account.model_report_account_report_trialbalance
